feature: add network ls implementation on API side: (#642)
