# apis/types/network_info.go
@@ -1,0 +1,67 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// NetworkInfo NetworkInfo represents the configuration of a network
+// swagger:model NetworkInfo
+
+type NetworkInfo struct {
+
+	// Driver is the Driver name used to create the network
+	Driver string `json:"Driver,omitempty"`
+
+	// ID uniquely identifies a network on a single machine
+	ID string `json:"ID,omitempty"`
+
+	// Name is the name of the network.
+	Name string `json:"Name,omitempty"`
+
+	// Scope describes the level at which the network exists
+	Scope string `json:"Scope,omitempty"`
+}
+
+/* polymorph NetworkInfo Driver false */
+
+/* polymorph NetworkInfo ID false */
+
+/* polymorph NetworkInfo Name false */
+
+/* polymorph NetworkInfo Scope false */
+
+// Validate validates this network info
+func (m *NetworkInfo) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NetworkInfo) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NetworkInfo) UnmarshalBinary(b []byte) error {
+	var res NetworkInfo
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
