# apis/types/network_list_resp.go
@@ -1,0 +1,108 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// NetworkListResp network list resp
+// swagger:model NetworkListResp
+
+type NetworkListResp struct {
+
+	// List of networks
+	// Required: true
+	Networks []*NetworkInfo `json:"Networks"`
+
+	// Warnings that occurred when fetching the list of networks
+	// Required: true
+	Warnings []string `json:"Warnings"`
+}
+
+/* polymorph NetworkListResp Networks false */
+
+/* polymorph NetworkListResp Warnings false */
+
+// Validate validates this network list resp
+func (m *NetworkListResp) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateNetworks(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateWarnings(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *NetworkListResp) validateNetworks(formats strfmt.Registry) error {
+
+	if err := validate.Required("Networks", "body", m.Networks); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Networks); i++ {
+
+		if swag.IsZero(m.Networks[i]) { // not required
+			continue
+		}
+
+		if m.Networks[i] != nil {
+
+			if err := m.Networks[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("Networks" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *NetworkListResp) validateWarnings(formats strfmt.Registry) error {
+
+	if err := validate.Required("Warnings", "body", m.Warnings); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NetworkListResp) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NetworkListResp) UnmarshalBinary(b []byte) error {
+	var res NetworkListResp
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
